--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,23 @@ build-backend = "setuptools.build_meta"
 where = ["."]
 include = ["pycht"]
 exclude = ["tests*", "notebook*", "misc*"]
+
+[tool.uv]
+required-version = ">=0.6.11,<0.7"
+
+[tool.isort]
+profile = "black"
+filter_files = true
+
+[tool.black]
+line-length = 120
+
+[tool.pylint.MASTER]
+load-plugins=[
+    "pylint_per_file_ignores"
+]
+[tool.pylint."messages control"]
+max-line-length = 120
+disable=["missing-module-docstring", "too-few-public-methods", "R0801"]
+extension-pkg-allow-list=["ujson"]
+per-file-ignores= ["./tests/:missing-function-docstring"]
