Add typer package to dev the cli.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dev = [
     "mkdocs-material>=9.6.9",
     "mkdocstrings[python]>=0.29.0",
     "pylint>=3.3.6",
+    "typer>=0.15.2",
 ]
 
 [build-system]
@@ -30,6 +31,9 @@ exclude = ["tests*", "notebook*", "misc*"]
 
 [tool.uv]
 required-version = ">=0.6.11,<0.7"
+
+[project.scripts]
+pycht = "pycht.cli:app"
 
 [tool.isort]
 profile = "black"
