Balance the bumpver modif to version and current_version.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,3 +57,9 @@ current_version = "0.1.1"
 version_pattern = "MAJOR.MINOR.PATCH"
 commit_message = "bump: {old_version} → {new_version}"
 tag_message = "v{new_version}"
+
+[tool.bumpver.file_patterns]
+"pyproject.toml" = [
+    'current_version = "{version}"',
+    'version = "{version}"'
+]
