--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ dependencies = [
     "pandas>=2.2.3",
 ]
 
+[project.urls]
+Repository = "https://github.com/tlentali/pycht"
+Documentation = "https://tlentali.com/docs/pycht/"
+
 [dependency-groups]
 dev = [
     "black>=25.1.0",
