--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: Pycht Documentation
+site_url: https://tlentali.com
 theme:
   name: material
 
@@ -14,3 +15,5 @@ nav:
       - Pycht: reference/pycht.md
       - Image Processing: reference/image_processing.md
       - Clustering: reference/clustering.md
+
+cname: tlentali.com
