CLI module pycht by default.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "opencv-python>=4.11.0.86",
     "pandas>=2.2.3",
+    "typer",
+    "typing-extensions"
 ]
 
 [project.urls]
