Add dependency mkdocs-material in ci.

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install mkdocs
+        pip install mkdocs mkdocs-material
 
     - name: Deploy to GitHub Pages
       run: |
