--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Street art by clustering."
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "opencv-python>=4.11.0.86",
+    "pillow>=11.2.1",
     "scikit-learn>=1.6.1",
     "typer",
     "typing-extensions",
